feat: footer & discountBanner done

--- a/src/pages/Home/HomePage.css
+++ b/src/pages/Home/HomePage.css
@@ -12,3 +12,8 @@
   background: url('../../assets/images/hero.jpeg') no-repeat center center;
   background-size: cover;
 }
+
+.discountBanner {
+  background: url('../../assets/images/discountbg.jpeg') no-repeat center center;
+  background-size: cover;
+}
