--- a/src/pages/AboutUs/AboutUs.css
+++ b/src/pages/AboutUs/AboutUs.css
@@ -37,7 +37,7 @@
 .hero-content {
   position: relative;
   z-index: 1;
-  color: var(--clr-white);
+  color: var(--clr-black);
   padding: 0 var(--spacing-lg);
 }
 .about-title {
